syntax = "proto2";
enum ServiceType{
  INVALID_Type = 0;
  Auth = 1;
  System = 2;
  Logic = 3;
}
