syntax = "proto2";

enum LogicCmd{
	Invalid_Logic_Cmd = 0;
	eLoginLogicReq = 1;
	eLoginLogicRes = 2;
	eEnterZoneReq = 3;
	eEnterZoneRes = 4;
	eEnterRoom = 5;
	ePlayerEnterRoom = 6;
	ePlayerExitRoom = 7;

	eExitRoomReq = 8;
	eExitRoomRes = 9;

	eGameStart = 10;

	eUdpTest = 11;
	eLogicFrame = 12;
}

message LogicFrame{
	required int32 frameid = 1;
}


message UdpTest{
	required int32 content = 1;
}

message LoginLogicReq{
	required string ip = 1;
	required int32 udp_port = 2;
}

message LoginLogicRes{
	required int32 status = 1;
}

message EnterZoneReq{
	required int32 zoneid = 1;
}

message EnterZoneRes{
	required int32 status = 1;
}

message EnterRoom{
	required int32 zoneid = 1;
	required int32 roomid = 2;
	required int32 seatid = 3;
	required int32 side = 4;
}

message PlayerEnterRoom{
	required string unick = 1;
	required int32 uface = 2;
	required int32 usex = 3;
	required int32 seatid = 4;
	required int32 side = 5;
}

message PlayerExitRoom{
	required int32 seatid = 1 ;
}

message EnterRoomRes{
	required int32 status = 1;
}

message ExitRoomRes{
	required int32 status = 1;
}

message GameStart{
	repeated int32 heros = 1;
}